# Progect_Folder

./: main.py  pyproject.toml  readme.md
Tests/: test_parser.py  test_vacancy.py
data/: vacancies.json
src/: hh_api.py  json_worker.py  parser.py  user_interaction.py  vacancy.py
tests/: test_parser.py  test_vacancy.py
